--- a/QRecipes/Podfile
+++ b/QRecipes/Podfile
@@ -11,6 +11,7 @@ target 'QRecipes' do
   pod 'Firebase/Analytics'
   pod 'Firebase/Core'
   pod 'Firebase/Auth'
+  pod 'GoogleSignIn'
   pod 'Firebase/Database'
   pod 'Firebase/Storage'
   pod 'SnapKit'
