--- a/QRecipes/Podfile
+++ b/QRecipes/Podfile
@@ -12,6 +12,7 @@ target 'QRecipes' do
   pod 'Firebase/Core'
   pod 'Firebase/Auth'
   pod 'GoogleSignIn'
+  pod 'FBSDKLoginKit'
   pod 'Firebase/Database'
   pod 'Firebase/Storage'
   pod 'SnapKit'
